--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.1.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
@@ -21,6 +23,8 @@
     "@babel/node": "^7.16.5",
     "@babel/plugin-transform-runtime": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
-    "detect-port": "^1.3.0"
+    "detect-port": "^1.3.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0"
   }
 }
